# Omikai-Bodhi

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GIT_AGENT.md  LICENSE  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  loc.yml  release.yml
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  completions.rs  convert.rs  llm.rs  main.rs
crates/commands/: Cargo.toml
crates/commands/src/: advanced.rs  builtins.rs  git.rs  lib.rs  session.rs
crates/commands/tests/: integration_tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/engine/: mod.rs
crates/extension_api/: Cargo.toml
crates/extension_api/src/: lib.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/fs_real/: Cargo.toml
crates/fs_real/src/: lib.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: lib.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: contract.rs  execution.rs  lib.rs  promotion.rs
crates/knowledge_local/: Cargo.toml
crates/knowledge_local/src/: lib.rs
crates/language_model/: Cargo.toml
crates/language_model/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/omik_provider/: Cargo.toml
crates/omik_provider/src/: lib.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: error.rs  lib.rs  schema.rs  session.rs  store.rs  tests.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
crates/terminal_crossterm/: Cargo.toml
crates/terminal_crossterm/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: cache.rs  lib.rs
crates/tools/src/agent/: mod.rs
crates/tools/src/ask_user/: mod.rs
crates/tools/src/bash/: mod.rs
crates/tools/src/config/: mod.rs
crates/tools/src/file_edit/: mod.rs
crates/tools/src/file_read/: mod.rs
crates/tools/src/file_write/: mod.rs
crates/tools/src/glob/: mod.rs
crates/tools/src/grep/: mod.rs
crates/tools/src/lsp/: mod.rs
crates/tools/src/mcp/: mod.rs
crates/tools/src/task/: mod.rs
crates/tools/src/web_fetch/: mod.rs
crates/tools/tests/: integration_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  markdown.rs  progress.rs  theme.rs
crates/workflows/: Cargo.toml
crates/workflows/src/: lib.rs
docs/: architecture.md  user-guide.md
docs/internal/: gitskill.md  gitskillv2.md  plan.md  plan2.md
examples/: Cargo.toml  basic_config.rs  simple_query.rs  tool_usage.rs
scripts/: count_lines.sh
