[package]
name = "theasus-agents"
description = "Bodhi Multi-Agent System"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
theasus-core.workspace = true
theasus-tools.workspace = true
theasus-language-model.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4"
