[package]
name = "theasus-commands"
description = "Bodhi Slash Commands system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
theasus-core.workspace = true
theasus-tools.workspace = true
theasus-settings.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
