[package]
name = "theasus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and query engine for Theasus AI terminal"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

[features]
default = []
test-support = []
