[package]
name = "theasus-extension-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
