[package]
name = "theasus-knowledge-local"
description = "Filesystem-backed Knowledge Layer implementation for Bodhi agents"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
theasus-knowledge.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
