[package]
name = "theasus-language-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Language model trait abstraction for Theasus"

[dependencies]
theasus-http-client = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []
test-support = []
