[package]
name = "theasus-omik-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
theasus-language-model.workspace = true
theasus-http-client.workspace = true
theasus-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes = "1"

[features]
default = []
test-support = []
