[package]
name = "theasus-session"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Session persistence with SQLite for Theasus"

[dependencies]
theasus-core = { workspace = true }

# SQLite
rusqlite = { workspace = true }

# Core deps
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
