[package]
name = "theasus-workflows"
description = "Bodhi Workflow DSL Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
theasus-core.workspace = true
theasus-tools.workspace = true
theasus-agents.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
